@@ -1,7 +1,5 @@
 package com.yello.server.domain.friend.service;
 
-import static com.yello.server.global.common.util.ConstantUtil.RANDOM_COUNT;
-
 import com.yello.server.domain.friend.dto.FriendsResponse;
 import com.yello.server.domain.friend.dto.response.FriendShuffleResponse;
 import com.yello.server.domain.friend.entity.Friend;
@@ -11,13 +9,16 @@ import com.yello.server.domain.user.entity.User;
 import com.yello.server.domain.user.entity.UserRepository;
 import com.yello.server.domain.user.exception.UserException;
 import com.yello.server.global.common.ErrorCode;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Collections;
+import java.util.List;
+
+import static com.yello.server.global.common.util.ConstantUtil.RANDOM_COUNT;
+
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -29,8 +30,8 @@ public class FriendServiceImpl implements FriendService {
     @Override
     public FriendsResponse findAllFriends(Pageable pageable, Long userId) {
         List<Friend> friends = friendRepository.findAllFriendsByUserId(pageable, userId)
-            .stream()
-            .toList();
+                .stream()
+                .toList();
 
         return FriendsResponse.of(friends);
     }
@@ -40,13 +41,13 @@ public class FriendServiceImpl implements FriendService {
     public void addFriend(Long userId, Long targetId) {
 
         User target = userRepository.findById(targetId)
-            .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
+                .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
         User user = userRepository.findById(userId)
-            .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
+                .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
 
         Friend friendData = friendRepository.findByFollowingAndFollower(userId, targetId);
 
-        if (friendData!=null) {
+        if (friendData != null) {
             throw new FriendException(ErrorCode.EXIST_FRIEND_EXCEPTION);
         }
 
@@ -58,19 +59,19 @@ public class FriendServiceImpl implements FriendService {
     public List<FriendShuffleResponse> shuffleFriend(Long userId) {
 
         User user = userRepository.findById(userId)
-            .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
+                .orElseThrow(() -> new UserException(ErrorCode.NOT_FOUND_USER_EXCEPTION));
 
         List<Friend> allFriends = friendRepository.findAllByUser(user);
 
         if (allFriends.size() < RANDOM_COUNT) {
-            throw new FriendException(ErrorCode.FRIEND_COUNT_LACK_EXCEPTION);
+            throw new FriendException(ErrorCode.LACK_USER_EXCEPTION);
         }
 
         Collections.shuffle(allFriends);
 
         return allFriends.stream()
-            .map(FriendShuffleResponse::of)
-            .limit(RANDOM_COUNT)
-            .collect(Collectors.toList());
+                .map(FriendShuffleResponse::of)
+                .limit(RANDOM_COUNT)
+                .toList();
     }
 }
